changed usage of URI